import and clean some data

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,6 @@ Time_Series_Assignment/code/Data_Create.R
 Time_Series_Assignment/code/Example_Plot_Scatter.R
 
 # Large data files
-/data
+/Time_Series_Assignment/data
+Time_Series_Assignment/resources/South African J Economics - 2005 - MACDONALD - ESTIMATION OF THE EQUILIBRIUM REAL EXCHANGE RATE FOR SOUTH AFRICA1.pdf
+Time_Series_Assignment/resources/South African J Economics - 2006 - PLESSIS - EXOGENEITY IN A RECENT EXCHANGE RATE MODEL  A RESPONSE TO MACDONALD AND RICCI.pdf
