--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ Time_Series_Assignment/resources/South African J Economics - 2005 - MACDONALD - 
 Time_Series_Assignment/resources/South African J Economics - 2006 - PLESSIS - EXOGENEITY IN A RECENT EXCHANGE RATE MODEL  A RESPONSE TO MACDONALD AND RICCI.pdf
 Time_Series_Assignment/resources/Econometrics 871 - Guidelines for Time Series Research Project.pdf
 Time_Series_Assignment/resources/Econometrics 871 - Suggested papers for replication.pdf
+Time_Series_Assignment/Time_Series_Assignment.log
