--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ Time_Series_Assignment/resources/South African J Economics - 2006 - PLESSIS - EX
 Time_Series_Assignment/resources/Econometrics 871 - Guidelines for Time Series Research Project.pdf
 Time_Series_Assignment/resources/Econometrics 871 - Suggested papers for replication.pdf
 Time_Series_Assignment/Time_Series_Assignment.log
+Time_Series_Assignment/Time_Series_Assignment.tex
