--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ Time_Series_Assignment/resources/Econometrics 871 - Guidelines for Time Series R
 Time_Series_Assignment/resources/Econometrics 871 - Suggested papers for replication.pdf
 Time_Series_Assignment/Time_Series_Assignment.log
 Time_Series_Assignment/Time_Series_Assignment.tex
+
+# custom images
+/Time_Series_Assignment/images
